correct alignment in hero section

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ h2{
 .hero-inner{
     background-image: url("../images/section-img.jpg");
     background-size: 602px;
-    background-position: top right;
+    background-position-y: 50%;
+    background-position-x: right;
     background-repeat: no-repeat;
     width: 100%;
     height: 100%;
@@ -100,6 +101,7 @@ h2{
     flex-direction: column;
     justify-content: center;
     width: 458px;
+    height: 100%;
 }
 .hero-content-title{
     margin-bottom: 30px;
